--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@ p {
   margin-top: 0;
 }
 .attribution{
+  line-height: 0px;
   margin-top: 20px;
 }
     .attribution { font-size: 11px; text-align: center; }
@@ -75,10 +76,12 @@ p {
       <h1>Improve your front-end skills by building projects</h1>
       <p>Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
     </div>
+
+    <div class="attribution">
+      <p>Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. </p>
+      <p>Coded by <a href="#">Mehul Poshattiwar</a>.</p>
+    </div>
   </div>
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Mehul Poshattiwar</a>.
-  </div>
+  
 </body>
 </html>
